[package]
name = "bbshark"
version = "0.1.1"
authors = [ "dunlopWill" ]
edition = "2024"
rust-version = "1.88.0"
description = "Command-line interface to prints a very popular kid's song."
readme = "https://github.com/dunlopWill/bbshark/blob/main/README.md"
repository = "https://github.com/dunlopWill/bbshark"
license = "MIT"
license-file = "https://github.com/dunlopWill/bbshark/blob/main/LICENSE"
keywords = ["bbshark", "song", "kids", "cli", "command-line", "fun"]

[dependencies]
clap = "2.33"

[dev-dependencies]
assert_cmd = "1"